--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </head>
     <body id="page-top">
 
-    <h2>你的裝置 Token 是：</h2>
-    <pre id="token">載入中...</pre>
+<!--    <h2>你的裝置 Token 是：</h2>-->
+<!--    <pre id="token">載入中...</pre>-->
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -155,66 +155,66 @@
         <script src="js/scripts.js"></script>
 
 
-        <script type="module">
-            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-            import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-messaging.js";
+<!--        <script type="module">-->
+<!--            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";-->
+<!--            import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-messaging.js";-->
 
-            const firebaseConfig = {
-                apiKey: "AIzaSyBiPyvQwqwRKtJNjQ_LE5zXbo8PVzKTaVw",
-                authDomain: "joechentestfcm0421.firebaseapp.com",
-                projectId: "joechentestfcm0421",
-                messagingSenderId: "26421742760",
-                appId: "1:26421742760:web:5162945a0532cc1433869d",
-            };
+<!--            const firebaseConfig = {-->
+<!--                apiKey: "AIzaSyBiPyvQwqwRKtJNjQ_LE5zXbo8PVzKTaVw",-->
+<!--                authDomain: "joechentestfcm0421.firebaseapp.com",-->
+<!--                projectId: "joechentestfcm0421",-->
+<!--                messagingSenderId: "26421742760",-->
+<!--                appId: "1:26421742760:web:5162945a0532cc1433869d",-->
+<!--            };-->
 
-            // 初始化 Firebase
-            const app = initializeApp(firebaseConfig);
-            const messaging = getMessaging(app);
+<!--            // 初始化 Firebase-->
+<!--            const app = initializeApp(firebaseConfig);-->
+<!--            const messaging = getMessaging(app);-->
 
-            // 啟用通知權限並取得 token
-            const vapidKey = "BIqTEucc1S-3RNuVaCuzoqHT8-24tbZVLNLFSM1tbWwfLJfujx0KFMfSQM-75EluZCy3hGegObUGizuHPdenB6g"; // 從 Firebase 控制台 > 雲端訊息 > 網頁推播金鑰取得
-            getToken(messaging, { vapidKey })
-                .then((currentToken) => {
-                    if (currentToken) {
-                        console.log("🎉 裝置 Token:", currentToken);
-                        document.getElementById("token").innerText = currentToken;
-                        alert("你的裝置 Token 是：\n" + currentToken);
-                        // 你可以在這裡呼叫後端 API，把 token 傳回去儲存
-                    } else {
-                        console.warn("⚠️ 尚未授權通知權限，無法取得 Token");
-                         // 👉 顯示在 alert 裡
-                    }
-                })
-                .catch((err) => {
-                    console.error("❌ 取得 Token 發生錯誤:", err);
-                });
+<!--            // 啟用通知權限並取得 token-->
+<!--            const vapidKey = "BIqTEucc1S-3RNuVaCuzoqHT8-24tbZVLNLFSM1tbWwfLJfujx0KFMfSQM-75EluZCy3hGegObUGizuHPdenB6g"; // 從 Firebase 控制台 > 雲端訊息 > 網頁推播金鑰取得-->
+<!--            getToken(messaging, { vapidKey })-->
+<!--                .then((currentToken) => {-->
+<!--                    if (currentToken) {-->
+<!--                        console.log("🎉 裝置 Token:", currentToken);-->
+<!--                        document.getElementById("token").innerText = currentToken;-->
+<!--                        alert("你的裝置 Token 是：\n" + currentToken);-->
+<!--                        // 你可以在這裡呼叫後端 API，把 token 傳回去儲存-->
+<!--                    } else {-->
+<!--                        console.warn("⚠️ 尚未授權通知權限，無法取得 Token");-->
+<!--                         // 👉 顯示在 alert 裡-->
+<!--                    }-->
+<!--                })-->
+<!--                .catch((err) => {-->
+<!--                    console.error("❌ 取得 Token 發生錯誤:", err);-->
+<!--                });-->
 
-            // 預覽推播通知（當瀏覽器開啟時）
-            onMessage(messaging, (payload) => {
-                console.log("📥 前景通知收到:", payload);
-                alert(`前景通知：${payload.notification.title} - ${payload.notification.body}`);
-            });
+<!--            // 預覽推播通知（當瀏覽器開啟時）-->
+<!--            onMessage(messaging, (payload) => {-->
+<!--                console.log("📥 前景通知收到:", payload);-->
+<!--                alert(`前景通知：${payload.notification.title} - ${payload.notification.body}`);-->
+<!--            });-->
 
-            // 註冊背景通知用的 Service Worker
-            if ("serviceWorker" in navigator) {
-                navigator.serviceWorker.register("firebase-messaging-sw.js")
-                    .then((registration) => {
-                        console.log("✅ Service Worker 註冊成功", registration);
-                    }).catch((err) => {
-                    console.error("❌ Service Worker 註冊失敗:", err);
-                });
-            }
-        </script>
+<!--            // 註冊背景通知用的 Service Worker-->
+<!--            if ("serviceWorker" in navigator) {-->
+<!--                navigator.serviceWorker.register("firebase-messaging-sw.js")-->
+<!--                    .then((registration) => {-->
+<!--                        console.log("✅ Service Worker 註冊成功", registration);-->
+<!--                    }).catch((err) => {-->
+<!--                    console.error("❌ Service Worker 註冊失敗:", err);-->
+<!--                });-->
+<!--            }-->
+<!--        </script>-->
 
-    <button onclick="copyToken()">複製 Token</button>
-    <script>
-        function copyToken() {
-            const tokenText = document.getElementById("token").innerText;
-            navigator.clipboard.writeText(tokenText)
-                .then(() => alert("Token 已複製"))
-                .catch(() => alert("複製失敗"));
-        }
-    </script>
+<!--    <button onclick="copyToken()">複製 Token</button>-->
+<!--    <script>-->
+<!--        function copyToken() {-->
+<!--            const tokenText = document.getElementById("token").innerText;-->
+<!--            navigator.clipboard.writeText(tokenText)-->
+<!--                .then(() => alert("Token 已複製"))-->
+<!--                .catch(() => alert("複製失敗"));-->
+<!--        }-->
+<!--    </script>-->
 
 
     </body>
