--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     if (currentToken) {
                         console.log("🎉 裝置 Token:", currentToken);
                         document.getElementById("token").innerText = currentToken;
-                        alert("你的裝置 Token 是：\n" + currentToken);
+                        //alert("你的裝置 Token 是：\n" + currentToken);
                         // 你可以在這裡呼叫後端 API，把 token 傳回去儲存
                     } else {
                         console.warn("⚠️ 尚未授權通知權限，無法取得 Token");
